Show languages in the docs sidebar (#2859)
So far our implementation of scope facets have been lacking and
therefore we made the decision to hide languages in the docs sidebar.
Now our support for scope facets in the most common languages is quite
good so I would like to show languages.

--- a/packages/cursorless-org-docs/src/css/custom.css
+++ b/packages/cursorless-org-docs/src/css/custom.css
@@ -28,3 +28,23 @@
 .hidden {
   display: none;
 }
+
+.card {
+  border: 1px solid rgba(0, 0, 0, 0.175);
+  margin-bottom: 1rem;
+}
+
+.card-header {
+  background-color: #f8f9fa;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.125);
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+}
+
+.card-body {
+  padding: 1rem;
+}
+
+.facet-name {
+  font-weight: 600;
+}
