fix: Update display line numbers to start at 0

--- a/packages/test-case-component/src/styles.css
+++ b/packages/test-case-component/src/styles.css
@@ -20,7 +20,7 @@ pre code {
 }
 
 pre {
-  counter-reset: line; /* Initialize a counter for line numbers */
+  counter-reset: line -1; /* Initialize a counter for line numbers */
 }
 
 .line::before {
