--- a/packages/cursorless-org-docs/src/css/custom.css
+++ b/packages/cursorless-org-docs/src/css/custom.css
@@ -2,6 +2,8 @@
 @tailwind base;
 @tailwind utilities;
 
+@import "./shiki.css";
+@import "./shiki-component-styles.css";
 /* From https://github.com/facebook/docusaurus/blob/cc0bceab9c1678303f6237f5526753edc1b12fc3/website/src/css/custom.css#L70-L86 */
 .header-github-link:hover {
   opacity: 0.6;
