Update scope link icon

--- a/packages/cursorless-org-docs/src/docs/user/languages/components/ScopeSupport.css
+++ b/packages/cursorless-org-docs/src/docs/user/languages/components/ScopeSupport.css
@@ -2,10 +2,11 @@
   font-weight: 600;
 }
 
-.link-icon {
-  margin-left: 0.25rem;
+.scope-header a {
+  display: none;
+  margin-left: 0.5rem;
 }
 
-.link-icon:hover {
-  text-decoration: none;
+.scope-header:hover a {
+  display: inline;
 }
