Added contribution scopes page to compare scopes between languages

--- a/packages/cursorless-org-docs/src/docs/components/Code.css
+++ b/packages/cursorless-org-docs/src/docs/components/Code.css
@@ -28,9 +28,14 @@
   counter-reset: line;
 }
 
+.code-container .shiki {
+  /* line-height: 1rem; */
+}
+
 .code-container .line {
   position: relative;
   margin-left: 1.5rem;
+  /* display: inline-block; */
 }
 
 .code-container .line::before {
