Migrating tailwindcss to v4 (#3058)

--- a/packages/cursorless-org/src/styles/globals.css
+++ b/packages/cursorless-org/src/styles/globals.css
@@ -1,6 +1,6 @@
-@tailwind components;
-@tailwind base;
-@tailwind utilities;
+@import "tailwindcss";
+
+@config "../../tailwind.config.js";
 
 :root {
   --safe-area-inset-top: env(safe-area-inset-top);
