--- a/packages/cheatsheet-local/src/styles.css
+++ b/packages/cheatsheet-local/src/styles.css
@@ -1,4 +1,3 @@
-/* You can add global styles to this file, and also import other style files */
-@tailwind components;
-@tailwind base;
-@tailwind utilities;
+@import "tailwindcss";
+
+@config "../tailwind.config.js";
