--- a/packages/cursorless-vscode-tutorial-webview/src/index.css
+++ b/packages/cursorless-vscode-tutorial-webview/src/index.css
@@ -1,3 +1,7 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+
+@config "../tailwind.config.js";
+
+@theme {
+  --text-2xs: 0.625rem;
+}
